--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,7 @@
 name = "ConformalMaps"
 uuid = "226e0482-2e74-5b70-8460-0a87d2a092cc"
+authors = ["Samuel S. Watson <sswatson@brown.edu>"
+version = "0.0.3"
 
 [deps]
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
