--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "ConformalMaps"
 uuid = "226e0482-2e74-5b70-8460-0a87d2a092cc"
-authors = ["Samuel S. Watson <sswatson@brown.edu>"
+authors = ["Samuel S. Watson <sswatson@brown.edu>"]
 version = "0.0.3"
 
 [deps]
